# Fallacy-Detector

./: .gitignore  LICENSE  README.md  notes.md  pyproject.toml
data/: dev.parquet  dev_fol_clean_gemini_gemini-2.5-pro.json  dev_fol_embeddings.npy  dev_fol_tokens.json  dev_nl_embeddings.npy  dev_nl_tokens.json  fol_test_samples.json  test.parquet  test_fol_clean_gemini_gemini-2.5-pro.json  test_fol_embeddings.npy  test_fol_tokens.json  test_nl_embeddings.npy  test_nl_tokens.json  train-00000-of-00001-8c3d4e48fe0f561b.parquet  train_fol_clean_gemini_gemini-2.5-pro.json  train_fol_embeddings.npy  train_fol_tokens.json  train_nl_embeddings.npy  train_nl_tokens.json  train_with_fol_gemini_gemini-2.5-pro.json  word_vocab.json
src/: classifier.py  fol_translator.py  llm_client.py  load_samples.py  ollama_integration.py  temp.ipynb  z3test.py
src/modeling/: dan_classifier.py  dan_plus_tfidf_classifier.py  tfidf_classifier.py  train_argument_features.py  train_bert_baseline.py  train_tfidf_argument.py  utils.py
src/modelling/: dan_classifier.py  dan_plus_tfidf_classifier.py  tfidf_classifier.py  train_dan.py  utils.py
src/preprocessing/: eda.ipynb  embeddings.py
